# stole-your-voice

./: .gitignore  .gitmodules  README.md  compose.yaml  flake.nix  package.json
Omni-Voice/: main.py  pyproject.toml
src/: gradio_tts.ts  index.ts  omnivoice_tts.ts  tts.ts
tests/: gradio_tts.test.ts  main.test.ts
