[project]
name = "omni-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.135.3",
  "omnivoice>=0.1.4",
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
